--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
                 background-color: red;
                 color: white;
             }
+
+            td {
+                padding: 10px;
+            }
         </style>
     </head>
 
